# HEC-Paris

./: .env.example  .gitignore  CLAUDE.md  README.md  architecure.md  briefing.md  pennylane_vs_us.md  pitch_research.md  pyproject.toml  pytest.ini
.claude/: CLAUDE-template.md  settings.json
.claude/commands/: commit.md  create-prd.md  create-rules.md  init-project.md  plan-feature.md  prime.md
Dev orchestration/Briefings/: 01_architecture_overview.md  02_executor_and_yaml.md  03_orchestration_and_auditability.md
Dev orchestration/_exports_for_b2b_accounting/: 01_ORCHESTRATION_REFERENCE.md  02_YAML_WORKFLOW_DSL.md  03_SQLITE_BACKBONE.md  04_AGENT_PATTERNS.md  05_swan_integration.md
Dev orchestration/swan/: CLAUDE.md  SWAN_API_REFERENCE.md
Dev orchestration/tech framework/: REF-FASTAPI-BACKEND.md  REF-GOOGLE-ADK.md  REF-SQLITE-BACKBONE.md  REF-SSE-STREAMING-FASTAPI.md  WORKFLOW_ORCHESTRATION_BRIEFING.md
Orchestration/PRDs/: MetaPRD.md  PRD-AutonomousCFO.md  PRD1.md  RealMetaPRD.md
Orchestration/Plans/: cerebras-runner-and-classifier-migration.md  phase-1-critical-gap-remediation.md  phase-1-gap-audit.md  phase-2-list-endpoints-and-frontend.md  phase-2-swan-document-frontend.md  phase-3-reporting-pipelines.md  phase1-metalayer-foundation.md  self-improving-wiki-knowledge-base.md
Orchestration/from agents for agents/: PRD1_VALIDATION_BRIEFING.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend-lovable/: bun.lockb  index.html  package.json  tailwind.config.ts  vite.config.ts
wiki/: SCHEMA.md
(+269 files in other folders)
